added muleshwar temple

--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
             </div>
             <div class="vd-mula-mutha__item vd-muleshwar">
                 <img class="vd-muleshwar-img" alt="Pune Muleshwar Temple"
-                    src="/muleshwar.png"
+                    src="muleshwar.png"
                     loading="lazy" width="250px" height="250px" style="margin-top: -24px;">
             </div>
             <div class="vd-mula-mutha__caption vd-muleshwar-caption">
